syntax = "proto3";

package clouddrive2;

// CloudDrive2 服务定义
// 基于官方文档: https://www.clouddrive2.com/api/CloudDrive2_gRPC_API_Guide.html

service CloudDrive {
    // ========== 公共方法 ==========
    
    // 获取服务器信息
    rpc GetServerInfo(Empty) returns (ServerInfo);
    
    // ========== 挂载点管理 ==========
    
    // 列出所有挂载点
    rpc ListMounts(Empty) returns (MountList);
    
    // 获取挂载点信息
    rpc GetMountInfo(MountInfoRequest) returns (MountInfo);
    
    // 挂载云盘
    rpc MountCloud(MountCloudRequest) returns (MountResponse);
    
    // 卸载云盘
    rpc UnmountCloud(UnmountCloudRequest) returns (MountResponse);
    
    // ========== 文件操作 ==========
    
    // 列出文件
    rpc ListFiles(ListFilesRequest) returns (FileList);
    
    // 获取文件信息
    rpc GetFileInfo(FileInfoRequest) returns (FileInfo);
    
    // 创建文件夹
    rpc CreateFolder(CreateFolderRequest) returns (OperationResponse);
    
    // 删除文件
    rpc DeleteFile(DeleteFileRequest) returns (OperationResponse);
    
    // 移动文件
    rpc MoveFile(MoveFileRequest) returns (OperationResponse);
    
    // 复制文件
    rpc CopyFile(CopyFileRequest) returns (OperationResponse);
    
    // 重命名文件
    rpc RenameFile(RenameFileRequest) returns (OperationResponse);
    
    // ========== 远程上传协议 ==========
    
    // 创建上传会话
    rpc CreateUploadSession(UploadSessionRequest) returns (UploadSessionResponse);
    
    // 上传数据块
    rpc UploadChunk(UploadChunkRequest) returns (UploadChunkResponse);
    
    // 完成上传
    rpc CompleteUpload(CompleteUploadRequest) returns (CompleteUploadResponse);
    
    // 取消上传
    rpc CancelUpload(CancelUploadRequest) returns (OperationResponse);
    
    // ========== 传输任务 ==========
    
    // 获取传输任务列表
    rpc GetTransferTasks(Empty) returns (TransferTaskList);
    
    // 获取任务进度
    rpc GetTaskProgress(TaskProgressRequest) returns (TaskProgress);
    
    // ========== 云盘 API ==========
    
    // 列出云盘 API
    rpc ListCloudAPIs(Empty) returns (CloudAPIList);
    
    // 获取云盘配置
    rpc GetCloudAPIConfig(CloudAPIConfigRequest) returns (CloudAPIConfig);
}

// ========== 通用消息 ==========

message Empty {}

message OperationResponse {
    bool success = 1;
    string message = 2;
}

// ========== 服务器信息 ==========

message ServerInfo {
    string version = 1;
    string build = 2;
    int64 uptime = 3;
    int32 mounts_count = 4;
}

// ========== 挂载点相关 ==========

message MountList {
    repeated MountInfo mounts = 1;
}

message MountInfo {
    string name = 1;              // 挂载点名称
    string path = 2;              // 挂载路径
    string cloud_type = 3;        // 云盘类型
    bool mounted = 4;             // 是否已挂载
    int64 space_total = 5;        // 总空间（字节）
    int64 space_used = 6;         // 已用空间（字节）
    string account = 7;           // 账号信息
}

message MountInfoRequest {
    string mount_path = 1;
}

message MountCloudRequest {
    string cloud_type = 1;
    string account = 2;
    string password = 3;
    string mount_path = 4;
}

message UnmountCloudRequest {
    string mount_path = 1;
}

message MountResponse {
    bool success = 1;
    string message = 2;
    string mount_path = 3;
}

// ========== 文件操作相关 ==========

message ListFilesRequest {
    string path = 1;
}

message FileList {
    repeated FileInfo files = 1;
}

message FileInfo {
    string name = 1;
    string path = 2;
    string type = 3;              // "file" | "folder"
    int64 size = 4;
    int64 modified_time = 5;
    string hash = 6;
}

message FileInfoRequest {
    string path = 1;
}

message CreateFolderRequest {
    string path = 1;
}

message DeleteFileRequest {
    string path = 1;
}

message MoveFileRequest {
    string source_path = 1;
    string dest_path = 2;
}

message CopyFileRequest {
    string source_path = 1;
    string dest_path = 2;
}

message RenameFileRequest {
    string path = 1;
    string new_name = 2;
}

// ========== 远程上传协议 ==========

message UploadSessionRequest {
    string file_name = 1;
    int64 file_size = 2;
    string target_path = 3;
    string file_hash = 4;         // SHA256
    string cloud_type = 5;
}

message UploadSessionResponse {
    bool success = 1;
    string session_id = 2;
    bool quick_upload = 3;        // 是否秒传
    string message = 4;
}

message UploadChunkRequest {
    string session_id = 1;
    int32 chunk_index = 2;
    bytes chunk_data = 3;
}

message UploadChunkResponse {
    bool success = 1;
    string message = 2;
}

message CompleteUploadRequest {
    string session_id = 1;
}

message CompleteUploadResponse {
    bool success = 1;
    string file_id = 2;
    string file_path = 3;
    string message = 4;
}

message CancelUploadRequest {
    string session_id = 1;
}

// ========== 传输任务 ==========

message TransferTaskList {
    repeated TransferTask tasks = 1;
}

message TransferTask {
    string task_id = 1;
    string type = 2;              // "upload" | "download"
    string file_name = 3;
    float progress = 4;           // 0-100
    string status = 5;            // "running" | "paused" | "completed" | "failed"
    int64 speed = 6;              // bytes/s
}

message TaskProgressRequest {
    string task_id = 1;
}

message TaskProgress {
    float progress = 1;
    int64 uploaded_bytes = 2;
    int64 total_bytes = 3;
    int64 speed = 4;
}

// ========== 云盘 API ==========

message CloudAPIList {
    repeated CloudAPIInfo apis = 1;
}

message CloudAPIInfo {
    string name = 1;
    string type = 2;
    bool enabled = 3;
    string account = 4;
}

message CloudAPIConfigRequest {
    string cloud_type = 1;
}

message CloudAPIConfig {
    string type = 1;
    bool enabled = 2;
    map<string, string> config = 3;
}

