"""
CloudDrive2 gRPC 实现

基于 CloudDrive2 官方文档的 Python 配置
文档地址: https://www.clouddrive2.com/api/

参考官方 Python SDK 实现的 gRPC 客户端
"""
import grpc
from grpc import aio as grpc_aio
import hashlib
import os
from typing import Dict, List, Any, Optional, AsyncIterator
from pathlib import Path
from log_manager import get_logger

logger = get_logger(__name__)


class CloudDrive2GRPCClient:
    """
    CloudDrive2 gRPC 客户端
    
    基于官方 Python SDK 实现
    """
    
    def __init__(self, host: str, port: int, username: str = "", password: str = ""):
        """
        初始化客户端
        
        Args:
            host: CloudDrive2 主机地址
            port: gRPC 端口（默认 19798）
            username: 用户名
            password: 密码
        """
        self.host = host
        self.port = port
        self.username = username
        self.password = password
        self.address = f"{host}:{port}"
        self.channel: Optional[grpc_aio.Channel] = None
        self.connected = False
    
    async def connect(self) -> bool:
        """建立 gRPC 连接"""
        try:
            logger.info(f"🔌 连接到 CloudDrive2 gRPC: {self.address}")
            
            # 创建 gRPC 通道
            self.channel = grpc_aio.insecure_channel(
                self.address,
                options=[
                    ('grpc.max_send_message_length', 100 * 1024 * 1024),  # 100MB
                    ('grpc.max_receive_message_length', 100 * 1024 * 1024),
                    ('grpc.keepalive_time_ms', 30000),
                    ('grpc.keepalive_timeout_ms', 5000),
                    ('grpc.keepalive_permit_without_calls', True),
                ]
            )
            
            # 测试连接
            try:
                await self.channel.channel_ready()
                logger.info("✅ gRPC 通道已就绪")
                self.connected = True
                return True
            except grpc.RpcError as e:
                logger.error(f"❌ gRPC 连接失败: {e}")
                return False
        
        except Exception as e:
            logger.error(f"❌ 连接异常: {e}")
            return False
    
    async def disconnect(self):
        """断开连接"""
        if self.channel:
            await self.channel.close()
            self.channel = None
            self.connected = False
            logger.info("🔌 gRPC 连接已关闭")
    
    # ==================== 文件系统操作 ====================
    
    async def fs_list(self, path: str) -> List[Dict[str, Any]]:
        """
        列出目录内容
        
        Args:
            path: 目录路径
        
        Returns:
            文件列表
        """
        try:
            if not self.connected:
                await self.connect()
            
            # 构造请求
            # 注意：这里需要根据实际的 proto 定义来构造消息
            logger.info(f"📡 gRPC: fs.List({path})")
            
            # TODO: 使用实际的 gRPC stub 调用
            # stub = FileSystemStub(self.channel)
            # response = await stub.List(ListRequest(path=path))
            
            logger.warning("⚠️ fs_list 需要实际的 proto 定义")
            return []
        
        except Exception as e:
            logger.error(f"❌ fs_list 失败: {e}")
            return []
    
    async def fs_mkdir(self, path: str) -> bool:
        """
        创建目录
        
        Args:
            path: 目录路径
        
        Returns:
            是否成功
        """
        try:
            if not self.connected:
                await self.connect()
            
            logger.info(f"📡 gRPC: fs.Mkdir({path})")
            
            # TODO: 使用实际的 gRPC stub 调用
            # stub = FileSystemStub(self.channel)
            # response = await stub.Mkdir(MkdirRequest(path=path))
            # return response.success
            
            logger.warning("⚠️ fs_mkdir 需要实际的 proto 定义")
            return False
        
        except Exception as e:
            logger.error(f"❌ fs_mkdir 失败: {e}")
            return False
    
    async def fs_stat(self, path: str) -> Optional[Dict[str, Any]]:
        """
        获取文件/目录信息
        
        Args:
            path: 文件/目录路径
        
        Returns:
            文件信息字典
        """
        try:
            if not self.connected:
                await self.connect()
            
            logger.info(f"📡 gRPC: fs.Stat({path})")
            
            # TODO: 使用实际的 gRPC stub 调用
            logger.warning("⚠️ fs_stat 需要实际的 proto 定义")
            return None
        
        except Exception as e:
            logger.error(f"❌ fs_stat 失败: {e}")
            return None
    
    # ==================== 上传操作 ====================
    
    async def upload_create_session(
        self,
        file_path: str,
        target_path: str,
        file_size: int,
        file_hash: str
    ) -> Optional[str]:
        """
        创建上传会话
        
        Args:
            file_path: 本地文件路径
            target_path: 目标路径
            file_size: 文件大小
            file_hash: 文件哈希（SHA256）
        
        Returns:
            会话ID
        """
        try:
            if not self.connected:
                await self.connect()
            
            logger.info(f"📡 gRPC: Upload.CreateSession")
            logger.info(f"   文件: {os.path.basename(file_path)}")
            logger.info(f"   目标: {target_path}")
            logger.info(f"   大小: {file_size} bytes")
            logger.info(f"   哈希: {file_hash[:16]}...")
            
            # TODO: 使用实际的 gRPC stub 调用
            # stub = UploadStub(self.channel)
            # request = CreateSessionRequest(
            #     file_name=os.path.basename(file_path),
            #     file_size=file_size,
            #     file_hash=file_hash,
            #     target_path=target_path
            # )
            # response = await stub.CreateSession(request)
            # return response.session_id
            
            logger.warning("⚠️ upload_create_session 需要实际的 proto 定义")
            return None
        
        except Exception as e:
            logger.error(f"❌ upload_create_session 失败: {e}")
            return None
    
    async def upload_data_stream(
        self,
        session_id: str,
        file_path: str,
        chunk_size: int = 1024 * 1024  # 1MB
    ) -> bool:
        """
        流式上传文件数据
        
        Args:
            session_id: 上传会话ID
            file_path: 本地文件路径
            chunk_size: 数据块大小
        
        Returns:
            是否成功
        """
        try:
            if not self.connected:
                await self.connect()
            
            logger.info(f"📡 gRPC: Upload.DataStream (session={session_id[:8]}...)")
            
            # 读取并上传文件数据
            file_size = os.path.getsize(file_path)
            uploaded = 0
            
            async def data_generator() -> AsyncIterator[bytes]:
                """生成数据块"""
                nonlocal uploaded
                with open(file_path, 'rb') as f:
                    while True:
                        chunk = f.read(chunk_size)
                        if not chunk:
                            break
                        uploaded += len(chunk)
                        progress = (uploaded / file_size) * 100
                        logger.debug(f"   上传进度: {progress:.1f}%")
                        yield chunk
            
            # TODO: 使用实际的 gRPC stub 调用（流式）
            # stub = UploadStub(self.channel)
            # request_iterator = data_generator()
            # response = await stub.DataStream(request_iterator, metadata=[
            #     ('session-id', session_id)
            # ])
            # return response.success
            
            logger.warning("⚠️ upload_data_stream 需要实际的 proto 定义")
            return False
        
        except Exception as e:
            logger.error(f"❌ upload_data_stream 失败: {e}")
            return False
    
    async def upload_complete(self, session_id: str) -> bool:
        """
        完成上传
        
        Args:
            session_id: 上传会话ID
        
        Returns:
            是否成功
        """
        try:
            if not self.connected:
                await self.connect()
            
            logger.info(f"📡 gRPC: Upload.Complete (session={session_id[:8]}...)")
            
            # TODO: 使用实际的 gRPC stub 调用
            # stub = UploadStub(self.channel)
            # request = CompleteRequest(session_id=session_id)
            # response = await stub.Complete(request)
            # return response.success
            
            logger.warning("⚠️ upload_complete 需要实际的 proto 定义")
            return False
        
        except Exception as e:
            logger.error(f"❌ upload_complete 失败: {e}")
            return False
    
    # ==================== 挂载点管理 ====================
    
    async def mount_list(self) -> List[Dict[str, Any]]:
        """
        列出所有挂载点
        
        Returns:
            挂载点列表
        """
        try:
            if not self.connected:
                await self.connect()
            
            logger.info(f"📡 gRPC: Mount.List")
            
            # TODO: 使用实际的 gRPC stub 调用
            # stub = MountStub(self.channel)
            # response = await stub.List(Empty())
            # return [
            #     {
            #         'name': m.name,
            #         'path': m.path,
            #         'cloud_type': m.cloud_type,
            #         'mounted': m.mounted
            #     }
            #     for m in response.mounts
            # ]
            
            logger.warning("⚠️ mount_list 需要实际的 proto 定义")
            return []
        
        except Exception as e:
            logger.error(f"❌ mount_list 失败: {e}")
            return []
    
    async def mount_info(self, mount_path: str) -> Optional[Dict[str, Any]]:
        """
        获取挂载点信息
        
        Args:
            mount_path: 挂载点路径
        
        Returns:
            挂载点信息
        """
        try:
            if not self.connected:
                await self.connect()
            
            logger.info(f"📡 gRPC: Mount.Info({mount_path})")
            
            # TODO: 使用实际的 gRPC stub 调用
            logger.warning("⚠️ mount_info 需要实际的 proto 定义")
            return None
        
        except Exception as e:
            logger.error(f"❌ mount_info 失败: {e}")
            return None
    
    # ==================== 实用工具 ====================
    
    @staticmethod
    def calculate_file_hash(file_path: str, algorithm: str = 'sha256') -> str:
        """
        计算文件哈希
        
        Args:
            file_path: 文件路径
            algorithm: 哈希算法（sha256, sha1, md5）
        
        Returns:
            哈希值（十六进制字符串）
        """
        hash_func = getattr(hashlib, algorithm)()
        
        with open(file_path, 'rb') as f:
            while True:
                chunk = f.read(1024 * 1024)  # 1MB
                if not chunk:
                    break
                hash_func.update(chunk)
        
        return hash_func.hexdigest()
    
    async def __aenter__(self):
        """异步上下文管理器"""
        await self.connect()
        return self
    
    async def __aexit__(self, exc_type, exc_val, exc_tb):
        """异步上下文管理器"""
        await self.disconnect()


# ==================== 便捷函数 ====================

async def create_grpc_client(
    host: str = None,
    port: int = None,
    username: str = None,
    password: str = None
) -> CloudDrive2GRPCClient:
    """
    创建 gRPC 客户端
    
    Args:
        host: CloudDrive2 主机
        port: gRPC 端口
        username: 用户名
        password: 密码
    
    Returns:
        CloudDrive2GRPCClient 实例
    """
    host = host or os.getenv('CLOUDDRIVE2_HOST', 'localhost')
    port = port or int(os.getenv('CLOUDDRIVE2_PORT', '19798'))
    username = username or os.getenv('CLOUDDRIVE2_USERNAME', '')
    password = password or os.getenv('CLOUDDRIVE2_PASSWORD', '')
    
    client = CloudDrive2GRPCClient(host, port, username, password)
    await client.connect()
    return client


# ==================== 使用示例 ====================

async def example_usage():
    """
    使用示例
    """
    # 创建客户端
    async with create_grpc_client() as client:
        # 列出挂载点
        mounts = await client.mount_list()
        for mount in mounts:
            print(f"挂载点: {mount['name']} -> {mount['path']}")
        
        # 创建目录
        await client.fs_mkdir('/115/测试目录')
        
        # 上传文件
        session_id = await client.upload_create_session(
            file_path='/tmp/test.mp4',
            target_path='/115/测试目录/test.mp4',
            file_size=1024000,
            file_hash='abc123...'
        )
        
        if session_id:
            # 上传数据
            await client.upload_data_stream(session_id, '/tmp/test.mp4')
            
            # 完成上传
            await client.upload_complete(session_id)


if __name__ == '__main__':
    import asyncio
    asyncio.run(example_usage())

